--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,25 +10,13 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/main.css" />
-  <link rel="icon" href="./assets/images/favicon.png" />
+  <link rel="icon" href="./assets/images/i-w-watch.png" />
 </head>
 
 <body>
   <div class="page">
     <include src="./partials/header.html" title="Bienvenidos a Adalab"></include>
     <include src="./partials/main.html"></include>
-    <!-- <include
-        src="./partials/link.html"
-        aClass="link__adalab"
-        text="Adalab"
-        url="https://adalab.es"
-      ></include>
-      <include
-        src="./partials/link.html"
-        aClass="link__github"
-        text="GitHub"
-        url="https://github.com"
-      ></include> -->
     <include src="./partials/footer.html"></include>
   </div>
 </body>
